--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ankita's Portfolio</title>
+    <title>Ankita Kumari Jha</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
